--- a/nawaiam-sports.html
+++ b/nawaiam-sports.html
@@ -60,7 +60,7 @@
 <body>
     <h1>Juego DISC - Elige tu propia aventura</h1>
     <div class="creditos">
-        Desarrollo hecho por <strong>Uriel Kreszes</strong>.
+        Desarrollo hecho por <strong>Uriel Kreszes</strong> v2.
     </div>
     <div id="juego">
         <!-- Aquí se cargan las preguntas y opciones -->
